@@ -63,9 +63,9 @@
 			],
 			"reply_fields":[
 				{"tag": "RatingGroup",  "path": "*rep.Multiple-Services-Credit-Control.Rating-Group",
-					"type": "*constant", "value": "2","new_branch": true},
+					"type": "*group", "value": "2","new_branch": true},
 				{"tag": "CCTotalOctets2",  "path": "*rep.Multiple-Services-Credit-Control.Used-Service-Unit.CC-Total-Octets",
-					"type": "*variable", "value": "~*cgreq.UsedUnits2"},
+					"type": "*group", "value": "~*cgreq.UsedUnits2"},
 			],
 		},
 
