@@ -23,17 +23,17 @@
 			"flags": ["*none","*continue"], // do not send request to CGRateS
 			"reply_fields":[
 				{"tag": "NAPTROrder", "path": "*rep.Order",
-					"type": "*constant", "value": "100"},
+					"type": "*group", "value": "100"},
 				{"tag": "NAPTRPreference", "path": "*rep.Preference",
-					"type": "*constant", "value": "10"},
+					"type": "*group", "value": "10"},
 				{"tag": "NAPTRFlags", "path": "*rep.Flags",
-					"type": "*constant", "value": "U"},
+					"type": "*group", "value": "U"},
 				{"tag": "NAPTRService", "path": "*rep.Service",
-					"type": "*constant", "value": "E2U+SIP"},
-				{"tag": "NAPTRRegexp", "path": "*rep.Regexp", "type": "*variable",
+					"type": "*group", "value": "E2U+SIP"},
+				{"tag": "NAPTRRegexp", "path": "*rep.Regexp", "type": "*group",
 					"value": "~*cgrep.Suppliers.SortedSuppliers[0].SupplierParameters"},
 				{"tag": "NAPTRReplacement", "path": "*rep.Replacement",
-					"type": "*constant", "value": "."},
+					"type": "*group", "value": "."},
 			],
 		},
 		{
@@ -43,18 +43,18 @@
 				"*gte:~*cgrep.Suppliers.Count:2"],
 			"flags": ["*none","*continue"],
 			"reply_fields":[
-				{"tag": "NAPTROrder", "type": "*constant", "new_branch": true,
+				{"tag": "NAPTROrder", "type": "*group", "new_branch": true,
 				 "path": "*rep.Order", "value": "100"},
 				{"tag": "NAPTRPreference", "path": "*rep.Preference",
-					"type": "*constant", "value": "10"},
+					"type": "*group", "value": "10"},
 				{"tag": "NAPTRFlags", "path": "*rep.Flags",
-					"type": "*constant", "value": "U"},
+					"type": "*group", "value": "U"},
 				{"tag": "NAPTRService", "path": "*rep.Service",
-					"type": "*constant", "value": "E2U+SIP"},
-				{"tag": "NAPTRRegexp", "path": "*rep.Regexp", "type": "*variable",
+					"type": "*group", "value": "E2U+SIP"},
+				{"tag": "NAPTRRegexp", "path": "*rep.Regexp", "type": "*group",
 					"value": "~*cgrep.Suppliers.SortedSuppliers[1].SupplierParameters"},
 				{"tag": "NAPTRReplacement", "path": "*rep.Replacement",
-					"type": "*constant", "value": "."},
+					"type": "*group", "value": "."},
 			],
 		},
 	],
